[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/UnitUIControl.gd" type="Script" id=1]
[ext_resource path="res://def_theme.tres" type="Theme" id=2]

[node name="UnitUIControl" type="Control"]
margin_right = 80.0
margin_bottom = 63.0
rect_min_size = Vector2( 170, 63 )
mouse_filter = 1
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 2 )

[node name="SelectButton" type="Button" parent="VBoxContainer"]
margin_right = 170.0
margin_bottom = 18.0
rect_min_size = Vector2( 170, 0 )
toggle_mode = true
text = "Select"

[node name="HealthProgressBar" type="ProgressBar" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 170.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 5 )
value = 50.0
percent_visible = false

[node name="ActionMode" type="OptionButton" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 170.0
margin_bottom = 49.0
align = 1

[node name="CarriedItems" type="OptionButton" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 170.0
margin_bottom = 71.0
align = 1

[connection signal="pressed" from="VBoxContainer/SelectButton" to="." method="_on_SelectButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/ActionMode" to="." method="_on_ActionMode_item_selected"]
[connection signal="item_selected" from="VBoxContainer/CarriedItems" to="." method="_on_CarriedItems_item_selected"]
